[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enimies/Perseguidores/Enemy_chaser_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/rusher shooter.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enimies/Perseguidores/Rusher_Shooter.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.0
height = 28.0

[sub_resource type="CircleShape2D" id=4]
radius = 400.0

[sub_resource type="CircleShape2D" id=5]
radius = 250.0

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
velocidade = 100

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 3 )

[node name="Range" parent="." index="6"]
visible = false

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 4 )

[node name="ShootTimer" type="Timer" parent="." index="10"]
one_shot = true

[node name="Rush_Area" type="Area2D" parent="." index="11"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rush_Area" index="0"]
shape = SubResource( 5 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Rush_Area" to="." method="_on_Rush_Area_body_entered"]
[connection signal="body_exited" from="Rush_Area" to="." method="_on_Rush_Area_body_exited"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
